--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     </div>
     <p>
-      <span class="first-letter">Marina cumple 95!</span> todavÌa bella y simp·tica! .
+      <span class="first-letter">Marina cumple 95!</span> todav√≠a bella y simp√°tica! .
     </p>
 
 
@@ -86,7 +86,7 @@
 
 
     <p>
-      Stella was a great organizer of the event.
+      Estela was a great organizer of the event.
     </p>
     <img src="./resources/images/m6a.jpg">
     <br> <br> <br>
