--- a/index.html
+++ b/index.html
@@ -172,6 +172,62 @@
 		      </div>
 
 	    </div>
+	  
+<!-- Soledad iPhone fotos -->
+	  
+ <div class="photo">
+		      <div class="image-container">
+			<img src="./resources/images/1s_table2.jpg">
+		      </div>	
+ </div>
+
+			
+			
+ <div class="photo">
+		      <div class="image-container">
+			<img src="./resources/images/1s_estela.jpg">
+		      </div>	
+ </div>
+
+			
+			
+ <div class="photo">
+		      <div class="image-container">			
+			<img src="./resources/images/1s_mar1.jpg">
+		      </div>	
+ </div>
+
+			
+			
+ <div class="photo">
+		      <div class="image-container">			
+			<img src="./resources/images/1s_mar2.jpg">
+		      </div>	
+ </div>
+
+			
+			
+ <div class="photo">
+		      <div class="image-container">			
+			<img src="./resources/images/1s_marfrank1.jpg">
+		      </div>	
+ </div>
+
+			
+			
+ <div class="photo">
+		      <div class="image-container">			
+			<img src="./resources/images/1s_solmar.jpg">
+		      </div>	
+ </div>
+
+			
+			
+ <div class="photo">
+		      <div class="image-container">			
+			<img src="./resources/images/1s_table1.jpg">
+		      </div>	
+ </div>
 
 
   <!-- Footer -->
